@@ -1,12 +1,14 @@
 package io.openems.backend.metadata.odoo.odoo;
 
+import static java.util.Collections.emptyMap;
+
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStreamWriter;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
@@ -18,7 +20,7 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Future;
+import java.util.concurrent.CompletionException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -101,7 +103,9 @@ public class OdooUtils {
 		HttpURLConnection connection = null;
 		try {
 			// Open connection to Odoo
-			connection = (HttpURLConnection) new URL(url).openConnection();
+			connection = (HttpURLConnection) URI.create(url) //
+					.toURL() //
+					.openConnection(); //
 			connection.setConnectTimeout(5000);// 5 secs
 			connection.setReadTimeout(timeout);// 5 secs
 			connection.setRequestProperty("Accept-Charset", "US-ASCII");
@@ -220,20 +224,16 @@ public class OdooUtils {
 	 * @param url         to send the request
 	 * @param request     to send
 	 * @return SuccessResponseAndHeaders response as Future
-	 * @throws OpenemsNamedException on error
 	 */
-	protected static Future<SuccessResponseAndHeaders> sendAdminJsonrpcRequestAsync(Credentials credentials, String url,
-			JsonObject request) throws OpenemsNamedException {
-		var completableFuture = new CompletableFuture<SuccessResponseAndHeaders>();
-		completableFuture.completeAsync(() -> {
+	protected static CompletableFuture<SuccessResponseAndHeaders> sendAdminJsonrpcRequestAsync(Credentials credentials,
+			String url, JsonObject request) {
+		return CompletableFuture.supplyAsync(() -> {
 			try {
 				return sendAdminJsonrpcRequest(credentials, url, request);
 			} catch (OpenemsNamedException e) {
-				completableFuture.completeExceptionally(e);
+				throw new CompletionException(e);
 			}
-			return null;
 		});
-		return completableFuture;
 	}
 
 	/**
@@ -276,8 +276,9 @@ public class OdooUtils {
 	private static Object executeKw(Credentials creds, String model, String action, Object[] arg, Map<String, ?> kw)
 			throws MalformedURLException, XMLRPCException {
 		var params = new Object[] { creds.getDatabase(), creds.getUid(), creds.getPassword(), model, action, arg, kw };
-		var client = new XMLRPCClient(new URL(String.format("%s/xmlrpc/2/object", creds.getUrl())),
-				XMLRPCClient.FLAGS_NIL);
+		var uri = URI.create(String.format("%s/xmlrpc/2/object", creds.getUrl()));
+		var client = new XMLRPCClient(uri.toURL(), XMLRPCClient.FLAGS_NIL);
+
 		client.setTimeout(60 /* seconds */);
 		return client.call("execute_kw", params);
 	}
@@ -299,22 +300,37 @@ public class OdooUtils {
 	 *
 	 * @param credentials the Odoo credentials
 	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param params      the params, e.g ("limit","1")
 	 * @param domains     Odoo domain filters
 	 * @return Odoo object ids
 	 * @throws OpenemsException on error
 	 */
-	protected static Integer[] search(Credentials credentials, String model, Domain... domains)
+	protected static Integer[] search(Credentials credentials, String model, Map<String, ?> params, Domain... domains)
 			throws OpenemsException {
 		// Add domain filter
 		var domain = getAsObjectArray(domains);
 		Object[] paramsDomain = { domain };
 		try {
 			// Execute XML request
-			var resultObjs = (Object[]) OdooUtils.executeKw(credentials, model, "search", paramsDomain, Map.of());
+			var resultObjs = (Object[]) OdooUtils.executeKw(credentials, model, "search", paramsDomain, params);
 			return Arrays.copyOf(resultObjs, resultObjs.length, Integer[].class);
 		} catch (Throwable e) {
 			throw new OpenemsException("Unable to search from Odoo: " + e.getMessage());
 		}
+	}
+
+	/**
+	 * Executes a search on Odoo.
+	 *
+	 * @param credentials the Odoo credentials
+	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param domains     Odoo domain filters
+	 * @return Odoo object ids
+	 * @throws OpenemsException on error
+	 */
+	protected static Integer[] search(Credentials credentials, String model, Domain... domains)
+			throws OpenemsException {
+		return OdooUtils.search(credentials, model, emptyMap(), domains);
 	}
 
 	/**
@@ -382,16 +398,33 @@ public class OdooUtils {
 	 * @return the records as a Map array
 	 * @throws OpenemsException on error
 	 */
-	@SuppressWarnings("unchecked")
 	protected static Map<String, Object>[] searchRead(Credentials credentials, String model, Field[] fields,
 			Domain... domains) throws OpenemsException {
-		// Create request params
+		return OdooUtils.searchRead(credentials, model, fields, emptyMap(), domains);
+	}
+
+	/**
+	 * Search-Reads multiple records from Odoo.
+	 *
+	 * @param credentials the Odoo credentials
+	 * @param model       Odoo model to query (e.g. 'res.partner')
+	 * @param fields      fields that should be read
+	 * @param params      the odoo query params
+	 * @param domains     filter domains
+	 * @return the records as a Map array
+	 * @throws OpenemsException on error
+	 */
+	@SuppressWarnings("unchecked")
+	protected static Map<String, Object>[] searchRead(Credentials credentials, String model, Field[] fields,
+			Map<String, ?> params, Domain... domains) throws OpenemsException {
 		// Add domain filter
 		var domain = getAsObjectArray(domains);
 		var paramsDomain = new Object[] { domain };
 		// Add fields
 		var fieldStrings = getAsStringArray(fields);
-		var paramsFields = Map.of("fields", fieldStrings);
+		final var paramsFields = new HashMap<String, Object>();
+		paramsFields.put("fields", fieldStrings);
+		paramsFields.putAll(params);
 		try {
 			// Execute XML request
 			var result = (Object[]) OdooUtils.executeKw(credentials, model, "search_read", paramsDomain, paramsFields);
@@ -533,10 +566,10 @@ public class OdooUtils {
 	 * @return the odoo reference id or empty {@link Optional}
 	 */
 	protected static Optional<Integer> getOdooReferenceId(Object object) {
-		if (object instanceof Object[] odooReference) {
-			if (odooReference.length > 0 && odooReference[0] instanceof Integer) {
-				return Optional.of((Integer) odooReference[0]);
-			}
+		if (object instanceof Object[] odooReference //
+				&& odooReference.length > 0 //
+				&& odooReference[0] instanceof Integer i) {
+			return Optional.of(i);
 		}
 
 		return Optional.empty();
@@ -557,12 +590,13 @@ public class OdooUtils {
 
 		HttpURLConnection connection = null;
 		try {
-			connection = (HttpURLConnection) new URL(
-					credentials.getUrl() + "/report/pdf/" + report + "/" + id + "?session_id=" + session)
-					.openConnection();
+			connection = (HttpURLConnection) URI
+					.create(credentials.getUrl() + "/report/pdf/" + report + "/" + id + "?session_id=" + session)
+					.toURL().openConnection();
 			connection.setConnectTimeout(5000);
 			connection.setReadTimeout(5000);
 			connection.setRequestMethod("GET");
+			connection.setRequestProperty("Cookie", "session_id=" + session);
 			connection.setDoOutput(true);
 
 			return ByteStreams.toByteArray(connection.getInputStream());
